# Euler-Maths

./: README.md  TODO  TODO.txt  __init__.py  math_helpers.py  pyproject.toml  speed_test.py
src/euler_maths/: __init__.py  misc.py  prime.py
src/math_helpers/: __init__.py  functions.py  misc.py  prime.py
tests/: speed_test.py
