[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math_helpers"
version = "0.0.1"
authors = [
  { name="Luke Hartley", email="luke.hartley05@gmail.com" },
]
description = "A package of mathematical functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Luke943/MathHelpers"
"Bug Tracker" = "https://github.com/Luke943/MathHelpers/issues"